# PJScript

./: .gitattributes  .gitignore  Makefile  README.md  pjs.py  pjs.sh  setup.cfg  test.sh
examples/: startup.ast  startup.ast.json  startup.cpp  startup.tjs  startup.tjs-to-ast.json  startup.tjs-to.cpp  startup.tjs-to.hpp
examples/_reference/: program.cpp  startup.tjs-to.cpp  startup.tjs-to.hpp
examples/sample/: startup.tjs
examples/simple/: startup.tjs
pjscript/compiler/: cxx.py
pjscript/mode/: dump.py
pjscript/models/: __init__.py  base.py
pjscript/models/expression/: __init__.py  assignment.py  base.py  binary.py  call.py  function.py  memberaccess.py  memberassignment.py  membercall.py  objectcall.py  program.py  scopedaccess.py  scopedassignment.py  scopedcall.py
pjscript/models/literal/: __init__.py  base.py  boolean.py  identifier.py  null.py  string.py
pjscript/syntax/: lexer.py  parser.py  token.py
runtime/cxx/: CMakeLists.txt  pjscript.cpp  pjscript.hpp
runtime/cxx/pjscript/: value.cpp  value.hpp
runtime/cxx/pjscript/objects/: boolean.cpp  boolean.hpp  console.cpp  console.hpp  constructor.cpp  constructor.hpp  environment.cpp  environment.hpp  function.cpp  function.hpp  object.cpp  object.hpp  string.cpp  string.hpp
runtime/cxx/pjscript/primitives/: boolean.cpp  boolean.hpp  null.cpp  null.hpp  primitive.cpp  primitive.hpp  string.cpp  string.hpp  undefined.cpp  undefined.hpp
selfhost/: token.ast.json  token.tjs
