[options]
packages = find:
scripts =
    pjs.py
python_requires = >=3.6

[metadata]
name = tjscript
version = 0.2.0
description = PJScript - TJS (Text adventure game Javascript) compiler and interpreter
long_description = file: README.md
long_description_content_type = text/markdown
url = https://pjscript.jedi2light.moe
author = @jedi2light
author_email = stoyan.minaev@gmail.com
maintainer = @jedi2light
maintainer_email = stoyan.minaev@gmail.com
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license = GNU GPL v2
project_urls =
    Web Site = https://pjscript.jedi2light.moe
    Source = https://gitea.jedi2light.moe/jedi2light/pjscript.git/
    Bug Tracker = https://gitea.jedi2light.moe/jedi2light/pjscript/issues
    Documentation = https://gitea.jedi2light.moe/jedi2light/PJScript/wiki/What-is-PJScript
